RESOLVED FIXED201417
[WPE] MiniBrowser should handle the WebKitWebView::create signal
https://bugs.webkit.org/show_bug.cgi?id=201417
Summary [WPE] MiniBrowser should handle the WebKitWebView::create signal
Zan Dobersek
Reported 2019-09-02 23:38:41 PDT
[WPE] MiniBrowser should handle the WebKitWebView::create signal
Attachments
Patch (2.72 KB, patch)
2019-09-02 23:40 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2019-09-02 23:40:40 PDT
Zan Dobersek
Comment 2 2019-09-03 03:46:47 PDT
Comment on attachment 377873 [details] Patch Clearing flags on attachment: 377873 Committed r249425: <https://trac.webkit.org/changeset/249425>
Zan Dobersek
Comment 3 2019-09-03 03:46:50 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-09-03 03:47:19 PDT
Note You need to log in before you can comment on or make changes to this bug.