[WPE] MiniBrowser should handle the WebKitWebView::create signal https://bugs.webkit.org/show_bug.cgi?id=201417

Reviewed by Carlos Garcia Campos.

WPE's MiniBrowser should connect to and handle the
WebKitWebView::create signal, constructing a new bit related
WebKitWebView object upon invocation.

* MiniBrowser/wpe/main.cpp:
(webViewClose):
(createWebView):
(main):


Canonical link: https://commits.webkit.org/215056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249425 268f45cc-cd09-0410-ab3c-d52691b4dbfc